--- a/Demonstrations/ONK_2017_Spring/.gitattributes
+++ b/Demonstrations/ONK_2017_Spring/.gitattributes
@@ -1,1 +1,3 @@
 Demo1_K-ONE-Playground_GIST.mp4 filter=lfs diff=lfs merge=lfs -text
+Demo2_Security-Mode-ONOS_KAIST.mp4 filter=lfs diff=lfs merge=lfs -text
+Demo3_OFM-ODL_KU.mp4 filter=lfs diff=lfs merge=lfs -text
